# s4_mk1_usb2midi

./: .gitignore  CMakeLists.txt  README.md  build.sh  lint.sh  run_tests.sh
.github/workflows/: build.yml
include/: core_midi_bridge.hpp  midi_types.hpp  protocol.hpp  s4_generic_protocol.hpp  s4_init.hpp  usb_device.hpp
src/: core_midi_bridge.cpp  main.cpp  s4_generic_protocol.cpp  s4_init.cpp  usb_device.cpp
tools/: midi_dev_tester.py
tools/tests/: test_s4_generic_protocol.cpp
